update component import in index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -30,8 +30,8 @@
   </head>
 
   <body>
-    <holochain-app></holochain-app>
+    <applet-test-harness></applet-test-harness>
 
-    <script type="module" src="./src/holochain-app.ts"></script>
+    <script type="module" src="./src/applet-test-harness.ts"></script>
   </body>
 </html>
